tests/paczka2/big_fuzzy/26148775.err
Error in line 3: MTqjz8Z A103 95,1
Error in line 1: KQhyUsYk S192 43,4
Error in line 22: KQhyUsYk A103 09,7
Error in line 23: mhosLsO7C S192 34,4
Error in line 27: MTqjz8Z S192 15,2
Error in line 28: KQhyUsYk A103 2,1
Error in line 45: KQhyUsYk S192 12,3
Error in line 48: IpNRiL A631 62,50
Error in line 58: HznjaavcW5 A276 1,2
Error in line 60: IpNRiL A631 104,8
Error in line 67: A631 S192 15,3
Error in line 77: A631 A631 47,6
Error in line 78: MTqjz8Z S192 36,0
Error in line 75: zKQPQk77 S192 78,6
Error in line 73: IpNRiL A103 38,6
Error in line 91: KQhyUsYk A276 32,2
Error in line 90: zKQPQk77 A276 87,2
Error in line 103: IpNRiL A276 43,84
Error in line 86: IpNRiL S192 64,3
Error in line 102: zKQPQk77 S192 135,8
Error in line 114: zKQPQk77 A631 23,4
Error in line 116: MTqjz8Z S192 39,8
Error in line 119: MTqjz8Z A631 0,8
Error in line 112: mhosLsO7C A276 16,3
Error in line 129: zKQPQk77 A103 29,2
Error in line 125: HznjaavcW5 A103 53,2
Error in line 121: IpNRiL A276 18,3
Error in line 143: KQhyUsYk S192 47,9
Error in line 147: HznjaavcW5 S192 15,8
Error in line 165: HznjaavcW5 A631 92,4
Error in line 152: MTqjz8Z A103 79,3
Error in line 189: mhosLsO7C A631 90,6
Error in line 197: zKQPQk77 A103 58,9
Error in line 198: IpNRiL S192 51,9
Error in line 214: HznjaavcW5 A631 96,3
Error in line 212: IpNRiL A276 88,0
Error in line 221: A631 A276 123,05
Error in line 216: A631 A276 67,5
Error in line 225: A631 S192 19,2
Error in line 241: A631 S192 04,0
Error in line 244: KQhyUsYk S192 25,73
Error in line 237: A631 S192 54,0
